# mosac-zero-check

./: .bazelrc  .gitignore  Dockerfile  Makefile  README.md  WORKSPACE
bazel/: BUILD.bazel  mosac.bzl  repositories.bzl
docs/: BUILD_MIGRATION_PLAN.md  NDSS_online_example_changelog.md  POC_IMPLEMENTATION_PLAN.md  attack.md
docs/for-claude-only/: SECURITY_VULNERABILITY_REPORT.md
mosac/context/: BUILD.bazel  context.h  context_test.cc  register.h  state.cc  state.h
mosac/cr/: BUILD.bazel  cr.cc  cr.h  cr_test.cc  fake_cr.cc  fake_cr.h  param.h  true_cr.cc  true_cr.h
mosac/cr/utils/: BUILD.bazel  ferret_ot.cc  ferret_ot.h  linear_code.h  linear_code_test.cc  mpfss.cc  mpfss.h  ot_adapter.cc  ot_adapter.h  ot_adapter_test.cc  ot_helper.cc  ot_helper.h  ot_helper_test.cc  shuffle.cc  shuffle.h  vole.cc  vole.h  vole_adapter.cc  vole_adapter.h  vole_adapter_test.cc  vole_test.cc
mosac/example/: AST2k_offline_example.cc  AShare_example.cc  BUILD.bazel  NDSS_offline_example.cc  NDSS_online_example.cc  NMul_offline_example.cc  attack_poc.cc  macro.h  memory_example.cc  socket_example.cc
mosac/ss/: BUILD.bazel  ashare.cc  ashare.h  ashare_test.cc  protocol.cc  protocol.h  public.cc  public.h  public_test.cc  type.h
mosac/utils/: BUILD.bazel  config.h  field.h  field_test.cc  test_util.h  uint256.cc  uint256.h  vec_op.cc  vec_op.h  vec_op_test.cc
