load("//bazel:mosac.bzl", "mosac_cc_binary", "mosac_cc_library")

package(default_visibility = ["//visibility:public"])

mosac_cc_library(
    name = "macro",
    hdrs = ["macro.h"]
)

mosac_cc_binary(
    name = "memory_example",
    srcs = ["memory_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)

mosac_cc_binary(
    name = "socket_example",
    srcs = ["socket_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)

mosac_cc_binary(
    name = "NDSS_offline_example",
    srcs = ["NDSS_offline_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)

mosac_cc_binary(
    name = "NDSS_online_example",
    srcs = ["NDSS_online_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)

mosac_cc_binary(
    name = "AST2k_offline_example",
    srcs = ["AST2k_offline_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)

mosac_cc_binary(
    name = "NMul_offline_example",
    srcs = ["NMul_offline_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)

mosac_cc_binary(
    name = "AShare_example",
    srcs = ["AShare_example.cc"],
    deps = [
        "//mosac/context:register",
        "//mosac/ss:protocol",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/link",
        "@yacl//yacl/utils:serialize",
        "@yacl//yacl/utils:parallel",
        "@llvm-project//llvm:Support",
        "@com_google_absl//absl/strings",
        ":macro",
    ],
)