load("//bazel:mosac.bzl", "mosac_cc_library", "mosac_cc_test")

package(default_visibility = ["//visibility:public"])

mosac_cc_library(
    name = "ss_type",
    hdrs = ["type.h"],
    deps = [
        "@yacl//yacl/math/mpint",
        "//mosac/utils:vec_op",
        "//mosac/utils:field",
    ],
)

mosac_cc_library(
    name = "protocol",
    srcs = [
        "ashare.cc",
        "protocol.cc",
        "public.cc",
    ],
    hdrs = [
        "ashare.h",
        "protocol.h",
        "public.h",
    ],
    deps = [
        ":ss_type",
        "//mosac/context",
        "//mosac/context:state",
        "//mosac/cr:fake_cr",
        "//mosac/cr:cr",
        "//mosac/utils:field",
        "//mosac/utils:vec_op",
        "@yacl//yacl/crypto/utils:rand",
        "@yacl//yacl/utils:parallel",
    ],
)

mosac_cc_test(
    name = "public_test",
    srcs = ["public_test.cc"],
    deps = [
        ":protocol",
        "//mosac/context:register",
        "//mosac/utils:test_util",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/utils:serialize",
    ],
)

mosac_cc_test(
    name = "ashare_test",
    srcs = ["ashare_test.cc"],
    deps = [
        ":protocol",
        ":ss_type",
        "//mosac/context:register",
        "//mosac/utils:test_util",
        "//mosac/utils:vec_op",
        "@yacl//yacl/base:int128",
        "@yacl//yacl/utils:serialize",
    ],
)

